# fred-public-data

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  EXAMPLES.md  LESSONSLEARNED.md  LICENSE  README.md  REFS-PUBLIC.md  SECURITY.md  explore.ipynb  pyproject.toml  refresh.py  requirements.txt
.github/workflows/: ci.yml
config/: series_catalog.toml
config/tachometer/: profile.toml
docs/: ARCHITECTURE.md  contributor-architecture-blueprint.md
docs/diagrams/: python-classes.puml  python-packages.puml  repo-architecture.drawio  repo-architecture.puml  shell-call-graph.puml  tooling-integrations.puml
scripts/: generate_examples.py  make_explore_notebook.py
tests/: test_endpoints.py  test_refresh.py
